2018-11-27  Albrecht Dreß  <albrecht.dress@arcor.de>

	Clear passwords if authentication fails

	* libbalsa/mailbox_pop3.c, libbalsa/send.c: clear appropriate
	password when libnetclient reports an authentication failure
	(SMTP, POP), or could not decrypt a user certificate's private key
	* libnetclient/net-client-pop.[ch]: report auth failure if the
	server reports any error in the authentication phase (AUTH,
	APOP, USER/PASS); fix nagging by Flexelint
	* libnetclient/net-client-smtp.[ch]: report auth failure if
	the server replies with status codes 534 or 535; fix nagging
	by Flexelint
	* libnetclient/net-client.[ch]: report a certificate key
	decryption error if the passphrase is wrong


2018-11-27  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix broken IMAP special folders & other migration issues

	* libbalsa/mailbox.[ch]: tell libbalsa_mailbox_new_from_config()
	if a folder is special, so it is processed even if it is an
	IMAP one
	* libbalsa/mailbox_imap.c: always set the "Migrated" flag for
	LibBalsaMailboxImap mailboxes
	* src/save-restore.c: in the migration process, track "user@host"
	folder ids in a hash table to avoid duplicates; keep special IMAP
	folders; load folders before mailboxes so special IMAP mailboxes
	do not overwrite the folder's IMAP configs (the server config
	originates from the first server seen)

2018-11-27  Albrecht Dreß  <albrecht.dress@arcor.de>

	Password dialogue improvements

	* libbalsa/imap-server.c, libbalsa/server-config.c,
	libinit_balsa/assistant_page_user.c, src/save-restore.c: use
	changed libbalsa_server_set_password() api
	* libbalsa/libbalsa.[c]: implement GTK_DIALOG_USE_HEADER_BAR
	detection as boolean for GCR dialogue
	* libbalsa/server.[ch]: clean up signal definitions (remove
	obsolete marshallers); remove unused class method;
	adjust api's for libbalsa_server_set_password(),
	libbalsa_server_get_password() and libbalsa_server_get_cert_pass()
	* libnetclient/net-client.[ch]: pass cert subject only