@@ -42,7 +42,6 @@ libbalsa_information_varg(GtkWindow *parent, LibBalsaInformationType type,
                           const char *fmt, va_list ap)
 {
     gchar *msg;
-    gchar *escaped;
     const gchar *icon_str;
     GIcon *icon;
     gboolean send;
@@ -72,14 +71,9 @@ libbalsa_information_varg(GtkWindow *parent, LibBalsaInformationType type,
     g_object_unref(icon);
 
     msg = g_strdup_vprintf(fmt, ap);
-    /* GNotification uses HTML markup (???), so we must replace '<' and
-     * '&' with the corresponding entity in the message string. */
-    escaped = g_markup_escape_text(msg, -1);
+    g_notification_set_body(notification, msg);
+    send = msg[0] != '\0';
     g_free(msg);
-
-    g_notification_set_body(notification, escaped);
-    send = escaped[0] != '\0';
-    g_free(escaped);
 
     g_object_set_data(G_OBJECT(notification), "send", GINT_TO_POINTER(send));
     g_signal_emit_by_name(notification, "notify", NULL);
