@@ -1,3 +1,10 @@
+2018-11-27  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	GNotification does not use HTML markup
+
+	* libbalsa/information.c (libbalsa_information_varg): so do not
+	escape markup characters in the text
+
 2018-11-27  Albrecht Dreß  <albrecht.dress@arcor.de>
 
 	Clear passwords if authentication fails
